@@ -3,6 +3,7 @@ package software.bernie.techarium.trait.block;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.SneakyThrows;
+import lombok.experimental.UtilityClass;
 import net.minecraft.block.AbstractBlock;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockRenderType;
@@ -21,9 +22,10 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
+@UtilityClass
 public class BlockTraits {
-    public static abstract class MaterialTrait extends Trait {
-        public MaterialTrait() {
+    public abstract static class MaterialTrait extends Trait {
+        protected MaterialTrait() {
             this.addTweaker(AbstractBlock.Properties.class, this::tweakProperties);
         }
         protected abstract void tweakProperties(AbstractBlock.Properties properties);
@@ -42,7 +44,7 @@ public class BlockTraits {
 
         @SneakyThrows
         public T createTileEntity() {
-            return tileClass.newInstance();
+            return tileClass.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -52,7 +54,7 @@ public class BlockTraits {
     }
 
     @Data
-    public static class BlockRenderTypeTrait extends Trait{
+    public static class BlockRenderTypeTrait extends Trait {
         private final BlockRenderType blockRenderType;
     }
     
